--- a/10_unsupervised.ipynb
+++ b/10_unsupervised.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "that has the largest variance. By normalized, we mean that $\\sum_{i=1}^p \\phi^2_{i1} = 1$.\n",
     "\n",
-    "In other words, the first principal component loading vector solves the op- timization problem\n",
+    "In other words, the first principal component loading vector solves the optimization problem\n",
     "\n",
     "$$\n",
     "\\underset{\\phi_{11}, \\ldots, \\phi_{p 1}}{\\operatorname{max}} \\ \\left\\{\\frac{1}{n} \\sum_{i=1}^{n}\\left(\\sum_{j=1}^{p} \\phi_{j 1} x_{i j}\\right)^{2}\\right\\} \\quad \\text { subject to } \\quad \\sum_{j=1}^{p} \\phi_{j 1}^{2}=1\n",
@@ -305,9 +305,9 @@
    ],
    "source": [
     "# Get loadings\n",
-    "loadings = pca2.components_.T\n",
-    "df_loadings = pd.DataFrame(loadings, index=df.columns, columns=['PC1', 'PC2'])\n",
-    "df_loadings"
+    "components = pca2.components_.T\n",
+    "df_components = pd.DataFrame(components, index=df.columns, columns=['PC1', 'PC2'])\n",
+    "df_components"
    ]
   },
   {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -432,9 +432,273 @@
     "# Plot Principal Component loading vectors, using a second y-axis.\n",
     "ax1b = ax1.twinx().twiny() \n",
     "ax1b.set_ylim(-1,1); ax1b.set_xlim(-1,1)\n",
-    "for i in df_loadings[['PC1', 'PC2']].index:\n",
-    "    ax1b.annotate(i, (df_loadings.PC1.loc[i]*1.05, -df_loadings.PC2.loc[i]*1.05), color='orange', fontsize=16)\n",
-    "    ax1b.arrow(0,0,df_loadings.PC1[i], -df_loadings.PC2[i], color='orange', lw=2)"
+    "for i in df_components[['PC1', 'PC2']].index:\n",
+    "    ax1b.annotate(i, (df_components.PC1.loc[i]*1.05, -df_components.PC2.loc[i]*1.05), color='orange', fontsize=16)\n",
+    "    ax1b.arrow(0,0,df_components.PC1[i], -df_components.PC2[i], color='orange', lw=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PCA and spectral analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In case you haven't noticed, calculating principal components, is equivalent to calculating the eigenvectors of the design matrix $X'X$, i.e. the variance-covariance matrix of $X$. Indeed what we performed above is a decomposition of the variance of $X$ into orthogonal components.\n",
+    "\n",
+    "The constrained maximization problem above can be re-written in matrix notation as\n",
+    "\n",
+    "$$\n",
+    "\\max \\ \\phi' X'X \\phi \\quad \\text{ s. t. } \\quad \\phi'\\phi = 1\n",
+    "$$\n",
+    "\n",
+    "Which has the following dual representation\n",
+    "\n",
+    "$$\n",
+    "\\mathcal L (\\phi, \\lambda) = \\phi' X'X \\phi - \\lambda (\\phi'\\phi - 1)\n",
+    "$$\n",
+    "\n",
+    "Which gives first order conditions\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "& \\frac{\\partial \\mathcal L}{\\partial \\lambda} = \\phi'\\phi - 1 \\\\\n",
+    "& \\frac{\\partial \\mathcal L}{\\partial \\phi} = 2 X'X \\phi - 2 \\lambda \\phi\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Setting the derivatives to zero at the optimum, we get\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "& \\phi'\\phi = 1 \\\\\n",
+    "& X'X \\phi = \\lambda \\phi\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Thus, $\\phi$ is an **eigenvector** of the covariance matrix $X'X$, and the maximizing vector will be the one associated with the largest **eigenvalue** $\\lambda$. \n",
+    "\n",
+    "We can now double-check it using `numpy` linear algebra package."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "      <th>PC4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Murder</th>\n",
+       "      <td>0.535899</td>\n",
+       "      <td>0.418181</td>\n",
+       "      <td>0.649228</td>\n",
+       "      <td>-0.341233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Assault</th>\n",
+       "      <td>0.583184</td>\n",
+       "      <td>0.187986</td>\n",
+       "      <td>-0.743407</td>\n",
+       "      <td>-0.268148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UrbanPop</th>\n",
+       "      <td>0.278191</td>\n",
+       "      <td>-0.872806</td>\n",
+       "      <td>0.133878</td>\n",
+       "      <td>-0.378016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rape</th>\n",
+       "      <td>0.543432</td>\n",
+       "      <td>-0.167319</td>\n",
+       "      <td>0.089024</td>\n",
+       "      <td>0.817778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Eigenvalue</th>\n",
+       "      <td>124.012079</td>\n",
+       "      <td>49.488258</td>\n",
+       "      <td>8.671504</td>\n",
+       "      <td>17.828159</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   PC1        PC2       PC3        PC4\n",
+       "Murder        0.535899   0.418181  0.649228  -0.341233\n",
+       "Assault       0.583184   0.187986 -0.743407  -0.268148\n",
+       "UrbanPop      0.278191  -0.872806  0.133878  -0.378016\n",
+       "Rape          0.543432  -0.167319  0.089024   0.817778\n",
+       "Eigenvalue  124.012079  49.488258  8.671504  17.828159"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigenval, eigenvec = np.linalg.eig(X_scaled.T @ X_scaled)\n",
+    "data = np.concatenate((eigenvec,eigenval.reshape(1,-1)))\n",
+    "idx = list(df.columns) + ['Eigenvalue']\n",
+    "df_eigen = pd.DataFrame(data, index=idx, columns=['PC1', 'PC2','PC3','PC4'])\n",
+    "\n",
+    "df_eigen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The spectral decomposition of the variance of $X$ generates a set of orthogonal vectors (eigenvectors) with different magnitudes (eigenvalues). The eigenvalues tell us the amount of variance of the data in that direction.\n",
+    "\n",
+    "If we combine the eigenvectors together, we form a projection matrix $P$ that we can use to transform the original variables: $\\tilde X = P X$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "      <th>PC4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alabama</th>\n",
+       "      <td>0.985566</td>\n",
+       "      <td>1.133392</td>\n",
+       "      <td>0.156267</td>\n",
+       "      <td>-0.444269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alaska</th>\n",
+       "      <td>1.950138</td>\n",
+       "      <td>1.073213</td>\n",
+       "      <td>-0.438583</td>\n",
+       "      <td>2.040003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arizona</th>\n",
+       "      <td>1.763164</td>\n",
+       "      <td>-0.745957</td>\n",
+       "      <td>-0.834653</td>\n",
+       "      <td>0.054781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arkansas</th>\n",
+       "      <td>-0.141420</td>\n",
+       "      <td>1.119797</td>\n",
+       "      <td>-0.182811</td>\n",
+       "      <td>0.114574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>California</th>\n",
+       "      <td>2.523980</td>\n",
+       "      <td>-1.542934</td>\n",
+       "      <td>-0.341996</td>\n",
+       "      <td>0.598557</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 PC1       PC2       PC3       PC4\n",
+       "State                                             \n",
+       "Alabama     0.985566  1.133392  0.156267 -0.444269\n",
+       "Alaska      1.950138  1.073213 -0.438583  2.040003\n",
+       "Arizona     1.763164 -0.745957 -0.834653  0.054781\n",
+       "Arkansas   -0.141420  1.119797 -0.182811  0.114574\n",
+       "California  2.523980 -1.542934 -0.341996  0.598557"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_transformed = X_scaled @ eigenvec\n",
+    "df_transformed = pd.DataFrame(X_transformed, index=df.index, columns=['PC1', 'PC2','PC3','PC4'])\n",
+    "\n",
+    "df_transformed.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is exactly the dataset that we obtained before."
    ]
   },
   {
@@ -1410,9 +1674,9 @@
     "\n",
     "The four most common types of linkage are:\n",
     "\n",
-    "1. **Complete**: Maximal intercluster dissimilarity. Compute all pairwise dis- similarities between the observations in cluster A and the observations in cluster B, and record the largest of these dissimilarities.\n",
-    "2. **Single**: Minimal intercluster dissimilarity. Compute all pairwise dis- similarities between the observations in cluster A and the observations in cluster B, and record the smallest of these dissimilarities. \n",
-    "3. **Average**: Mean intercluster dissimilarity. Compute all pairwise dis- similarities between the observations in cluster A and the observations in cluster B, and record the average of these dissimilarities.\n",
+    "1. **Complete**: Maximal intercluster dissimilarity. Compute all pairwise dissimilarities between the observations in cluster A and the observations in cluster B, and record the largest of these dissimilarities.\n",
+    "2. **Single**: Minimal intercluster dissimilarity. Compute all pairwise dissimilarities between the observations in cluster A and the observations in cluster B, and record the smallest of these dissimilarities. \n",
+    "3. **Average**: Mean intercluster dissimilarity. Compute all pairwise dissimilarities between the observations in cluster A and the observations in cluster B, and record the average of these dissimilarities.\n",
     "4. **Centroid**: Dissimilarity between the centroid for cluster A (a mean vector of length p) and the centroid for cluster B. Centroid linkage can result in undesirable inversions.\n",
     "\n",
     "Average, complete, and single linkage are most popular among statisticians. Average and complete linkage are generally preferred over single linkage, as they tend to yield more balanced dendrograms. Centroid linkage is often used in genomics, but suffers from a major drawback in that an inversion can occur, whereby two clusters are fused at a height below either of the individual clusters in the dendrogram. This can lead to difficulties in visualization as well as in interpretation of the dendrogram."
