--- a/9_postdoubleselection.ipynb
+++ b/9_postdoubleselection.ipynb
@@ -1144,7 +1144,7 @@
     "\n",
     "This estimator is going to have two problems:\n",
     "\n",
-    "1. Slow rate of convergence, i.e. slower than $n^{1/2}$\n",
+    "1. Slow rate of convergence, i.e. slower than $\\sqrt(n)$\n",
     "2. It will be biased because we are employing highdimensional regularized estimators (e.g. we are doing variable selection)"
    ]
   },
