--- a/10_unsupervised.ipynb
+++ b/10_unsupervised.ipynb
@@ -111,7 +111,6 @@
     "\n",
     "After the first principal component $Z_1$ of the features has been determined, we can find the second principal component $Z_2$. The **second principal component** is the linear combination of $\\{X_1, . . . , X_p\\}$ that has maximal variance out of all linear combinations that are *uncorrelated* with $Z_1$.\n",
     "\n",
-    "\n",
     "We illustrate the use of PCA on the `USArrests` data set. For each of the 50 states in the United States, the data set contains the number of arrests per $100,000$ residents for each of three crimes: `Assault`, `Murder`, and `Rape.` We also record the percent of the population in each state living in urban areas, `UrbanPop`."
    ]
   },
@@ -304,10 +303,10 @@
     }
    ],
    "source": [
-    "# Get loadings\n",
-    "components = pca2.components_.T\n",
-    "df_components = pd.DataFrame(components, index=df.columns, columns=['PC1', 'PC2'])\n",
-    "df_components"
+    "# Get weights\n",
+    "weights = pca2.components_.T\n",
+    "df_weights = pd.DataFrame(weights, index=df.columns, columns=['PC1', 'PC2'])\n",
+    "df_weights"
    ]
   },
   {
@@ -399,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -432,9 +431,9 @@
     "# Plot Principal Component loading vectors, using a second y-axis.\n",
     "ax1b = ax1.twinx().twiny() \n",
     "ax1b.set_ylim(-1,1); ax1b.set_xlim(-1,1)\n",
-    "for i in df_components[['PC1', 'PC2']].index:\n",
-    "    ax1b.annotate(i, (df_components.PC1.loc[i]*1.05, -df_components.PC2.loc[i]*1.05), color='orange', fontsize=16)\n",
-    "    ax1b.arrow(0,0,df_components.PC1[i], -df_components.PC2[i], color='orange', lw=2)"
+    "for i in df_weights[['PC1', 'PC2']].index:\n",
+    "    ax1b.annotate(i, (df_weights.PC1.loc[i]*1.05, -df_weights.PC2.loc[i]*1.05), color='orange', fontsize=16)\n",
+    "    ax1b.arrow(0,0,df_weights.PC1[i], -df_weights.PC2[i], color='orange', lw=2)"
    ]
   },
   {
@@ -487,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -568,7 +567,7 @@
        "Eigenvalue  124.012079  49.488258  8.671504  17.828159"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -682,7 +681,7 @@
        "California  2.523980 -1.542934 -0.341996  0.598557"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +736,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -828,21 +827,21 @@
        "Rape      0.075156 -0.200718"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get loadings\n",
-    "loadings_u = pca2_u.components_.T\n",
-    "df_loadings_u = pd.DataFrame(loadings_u, index=df.columns, columns=['PC1', 'PC2'])\n",
-    "df_loadings_u"
+    "# Get weights\n",
+    "weights_u = pca2_u.components_.T\n",
+    "df_weights_u = pd.DataFrame(weights_u, index=df.columns, columns=['PC1', 'PC2'])\n",
+    "df_weights_u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +914,7 @@
        "California  107.422953 -22.520070"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -951,9 +950,9 @@
     "    ax1.annotate(i, (df_dim2.PC1.loc[i], -df_dim2.PC2.loc[i]), ha='center', fontsize=14)\n",
     "ax1b = ax1.twinx().twiny() \n",
     "ax1b.set_ylim(-1,1); ax1b.set_xlim(-1,1)\n",
-    "for i in df_loadings[['PC1', 'PC2']].index:\n",
-    "    ax1b.annotate(i, (df_loadings.PC1.loc[i]*1.05, -df_loadings.PC2.loc[i]*1.05), color='orange', fontsize=16)\n",
-    "    ax1b.arrow(0,0,df_loadings.PC1[i], -df_loadings.PC2[i], color='orange', lw=2)\n",
+    "for i in df_weights[['PC1', 'PC2']].index:\n",
+    "    ax1b.annotate(i, (df_weights.PC1.loc[i]*1.05, -df_weights.PC2.loc[i]*1.05), color='orange', fontsize=16)\n",
+    "    ax1b.arrow(0,0,df_weights.PC1[i], -df_weights.PC2[i], color='orange', lw=2)\n",
     "ax1.set_title('Scaled')\n",
     "    \n",
     "# Unscaled PCA\n",
@@ -961,9 +960,9 @@
     "    ax2.annotate(i, (df_dim2_u.PC1.loc[i], -df_dim2_u.PC2.loc[i]), ha='center', fontsize=14)\n",
     "ax2b = ax2.twinx().twiny() \n",
     "ax2b.set_ylim(-1,1); ax2b.set_xlim(-1,1)\n",
-    "for i in df_loadings_u[['PC1', 'PC2']].index:\n",
-    "    ax2b.annotate(i, (df_loadings_u.PC1.loc[i]*1.05, -df_loadings_u.PC2.loc[i]*1.05), color='orange', fontsize=16)\n",
-    "    ax2b.arrow(0,0,df_loadings_u.PC1[i], -df_loadings_u.PC2[i], color='orange', lw=2)\n",
+    "for i in df_weights_u[['PC1', 'PC2']].index:\n",
+    "    ax2b.annotate(i, (df_weights_u.PC1.loc[i]*1.05, -df_weights_u.PC2.loc[i]*1.05), color='orange', fontsize=16)\n",
+    "    ax2b.arrow(0,0,df_weights_u.PC1[i], -df_weights_u.PC2[i], color='orange', lw=2)\n",
     "ax2.set_title('Unscaled')\n",
     "\n",
     "# Plot reference lines\n",
@@ -999,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1017,7 @@
        "array([2.53085875, 1.00996444, 0.36383998, 0.17696948])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1038,7 @@
        "array([0.62006039, 0.24744129, 0.0891408 , 0.04335752])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -1398,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1492,7 @@
        "KMeans(n_clusters=3, n_init=1, random_state=1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
