--- a/7_trees.ipynb
+++ b/7_trees.ipynb
@@ -552,7 +552,7 @@
     "\n",
     "    def get_next_nodes(self):\n",
     "        \"\"\"If the node is not terminal, get further splits\"\"\"\n",
-    "        if self.depth<=1: return \n",
+    "        if self.is_last_leaf: return \n",
     "        self.find_best_split()       \n",
     "        self.split()             \n",
     "        \n",
@@ -577,10 +577,12 @@
     "    def get_score(self, lhs, rhs):\n",
     "        \"\"\"Get score of a given split\"\"\"\n",
     "        y = self.y[self.idxs]\n",
-    "        lhs_std = y[lhs].std()\n",
-    "        rhs_std = y[rhs].std()\n",
-    "        return lhs_std * lhs.sum() + rhs_std * rhs.sum()\n",
+    "        lhs_mse = self.get_mse(y[lhs])\n",
+    "        rhs_mse = self.get_mse(y[rhs])\n",
+    "        return lhs_mse * lhs.sum() + rhs_mse * rhs.sum()\n",
     "        \n",
+    "    def get_mse(self, y): return np.mean((y-np.mean(y))**2)\n",
+    "    \n",
     "    def split(self): \n",
     "        \"\"\"Split a node into 2 sub-nodes (recursive)\"\"\"\n",
     "        x = self.x[self.idxs, self.split_col]\n",
@@ -590,7 +592,10 @@
     "        self.rhs = Node(self.x, self.y, self.idxs[rhs], self.depth-1)\n",
     "        to_print = (self.depth, self.split_col, self.split_val, sum(lhs), sum(rhs))\n",
     "        print('Split on layer %.0f: var%1.0f = %.4f (%.0f/%.0f)' % to_print)\n",
-    "        return self"
+    "        return self\n",
+    "    \n",
+    "    @property\n",
+    "    def is_last_leaf(self): return self.depth<=1\n"
    ]
   },
   {
