--- a/notebooks/1-regression.ipynb
+++ b/notebooks/1-regression.ipynb
@@ -54,8 +54,6 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from numpy.linalg import inv\n",
@@ -86,6 +84,21 @@
     "plt.rcParams['axes.titlesize'] = 18\n",
     "plt.rcParams['axes.labelsize'] = 14\n",
     "plt.rcParams['legend.fontsize'] = 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Remove warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -146,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
