--- a/notebooks/1-regression.ipynb
+++ b/notebooks/1-regression.ipynb
@@ -141,7 +141,7 @@
    "source": [
     "## 1.1 Simple Linear Regression\n",
     "\n",
-    "[*go to index*](#/1)"
+    "[*back to index*](#/1)"
    ]
   },
   {
