--- a/notebooks/1-regression.ipynb
+++ b/notebooks/1-regression.ipynb
@@ -25,9 +25,7 @@
     "\n",
     "- [Simple Linear Regression](#/2)\n",
     "- [Multiple Linear Regression](#/24)\n",
-    "- [Other Considerations in the Regression Model](#/32)\n",
-    "\n",
-    "On browser: use arrow down to look at code."
+    "- [Other Considerations in the Regression Model](#/32)"
    ]
   },
   {
@@ -921,6 +919,7 @@
     "\n",
     "    # Init figure\n",
     "    fig, ax = plt.subplots(1,1)\n",
+    "    fig.suptitle('Role of the Intercept')\n",
     "\n",
     "    # Add new line on the previous plot\n",
     "    sns.regplot(x=advertising.TV, y=advertising.Sales, ax=ax, order=1, ci=None, scatter_kws={'color':'r', 's':9})\n",
