--- a/notebooks/1-regression.ipynb
+++ b/notebooks/1-regression.ipynb
@@ -4246,13 +4246,8 @@
     }
    },
    "source": [
-    "## Next Session"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Next Session\n",
+    "\n",
     "Jump to [Session 2 - Instrumental Variables](https://matteocourthoud.github.io/course/ml-econ/2-iv/)"
    ]
   }
