--- a/notebooks/09_postdoubleselection.ipynb
+++ b/notebooks/09_postdoubleselection.ipynb
@@ -297,9 +297,7 @@
     }
    },
    "source": [
-    "## 9.2 Omitted Variable Bias\n",
-    "\n",
-    "[*back to index*](#/1)"
+    "## 9.2 Omitted Variable Bias"
    ]
   },
   {
@@ -319,7 +317,7 @@
     "Define the corresponding **short regression** as\n",
     "\n",
     "$$\n",
-    "  y_i = x_i' \\alpha_0 + v_i \\quad \\text{ with } \\quad x_i = z_i' \\beta_0 + u_i\n",
+    "y_i = x_i' \\alpha_0 + v_i \\quad \\text{ with } \\quad x_i = z_i' \\gamma_0 + u_i\n",
     "$$"
    ]
   },
@@ -489,9 +487,7 @@
     }
    },
    "source": [
-    "## 9.3 Pre-test bias\n",
-    "\n",
-    "[*back to index*](#/1)"
+    "## 9.3 Pre-Test Bias"
    ]
   },
   {
@@ -773,9 +769,9 @@
     "\n",
     " - when $\\beta_0$ is very large: in this case the test always rejects the null hypothesis $H_0 : \\beta_0=0$ and we always run the correct specification, i.e. the long regression\n",
     " \n",
-    " - when $\\beta_0$ is very small: in this case the test has very little power. However, as we saw from the Omitted Varaible Bias formula, the bias is small.\n",
+    " - when $\\beta_0$ is very small: in this case the test has very little power. However, as we saw from the Omitted Variable Bias formula, the bias is small.\n",
     " \n",
-    " - when $\\gamma_0$ is very small: also in this case the test has very little power. However, as we saw from the Omitted Varaible Bias formula, the bias is small."
+    " - when $\\gamma_0$ is very small: also in this case the test has very little power. However, as we saw from the Omitted Variable Bias formula, the bias is small."
    ]
   },
   {
@@ -803,10 +799,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean with beta=-0.03: 0.9926\n",
-      "Mean with beta=-0.09: 0.9826\n",
-      "Mean with beta=-0.30: 0.9925\n",
-      "Mean with beta=-0.90: 0.9994\n"
+      "Mean alpha with beta=-0.03: 0.9926\n",
+      "Mean alpha with beta=-0.09: 0.9826\n",
+      "Mean alpha with beta=-0.30: 0.9925\n",
+      "Mean alpha with beta=-0.90: 0.9994\n"
      ]
     }
    ],
@@ -819,7 +815,7 @@
     "for k, b_ in enumerate(b_sequence):\n",
     "    label = 'beta = %.2f' % b_\n",
     "    alpha[label] = pre_testing(a, b_, c, n)['Pre-test']\n",
-    "    print('Mean with beta=%.2f: %.4f' % (b_, np.mean(alpha[label])))"
+    "    print('Mean alpha with beta=%.2f: %.4f' % (b_, np.mean(alpha[label])))"
    ]
   },
   {
@@ -884,10 +880,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean with n=100: 0.9442\n",
-      "Mean with n=300: 0.9635\n",
-      "Mean with n=1000: 0.9925\n",
-      "Mean with n=3000: 0.9989\n"
+      "Mean alpha with n=100: 0.9442\n",
+      "Mean alpha with n=300: 0.9635\n",
+      "Mean alpha with n=1000: 0.9925\n",
+      "Mean alpha with n=3000: 0.9989\n"
      ]
     }
    ],
@@ -900,7 +896,7 @@
     "for k, n_ in enumerate(n_sequence):\n",
     "    label = 'n = %.0f' % n_\n",
     "    alpha[label] = pre_testing(a, b, c, n_)['Pre-test']\n",
-    "    print('Mean with n=%.0f: %.4f' % (n_, np.mean(alpha[label])))"
+    "    print('Mean alpha with n=%.0f: %.4f' % (n_, np.mean(alpha[label])))"
    ]
   },
   {
@@ -954,7 +950,7 @@
     }
    },
    "source": [
-    "We now look at what happens in the simulations when $beta_0$ is proportional to $\\frac{1}{\\sqrt{n}}$."
+    "We now look at what happens in the simulations when $\\beta_0$ is proportional to $\\frac{1}{\\sqrt{n}}$."
    ]
   },
   {
@@ -970,10 +966,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean with n=100: 0.9703\n",
-      "Mean with n=300: 0.9838\n",
-      "Mean with n=1000: 0.9914\n",
-      "Mean with n=3000: 0.9947\n"
+      "Mean alpha with n=100: 0.9703\n",
+      "Mean alpha with n=300: 0.9838\n",
+      "Mean alpha with n=1000: 0.9914\n",
+      "Mean alpha with n=3000: 0.9947\n"
      ]
     }
    ],
@@ -986,7 +982,7 @@
     "for k, n_ in enumerate(n_sequence):\n",
     "    label = 'n = %.0f' % n_\n",
     "    alpha[label] = pre_testing(a, beta[k], c, n_)['Pre-test']\n",
-    "    print('Mean with n=%.0f: %.4f' % (n_, np.mean(alpha[label])))"
+    "    print('Mean alpha with n=%.0f: %.4f' % (n_, np.mean(alpha[label])))"
    ]
   },
   {
@@ -1018,7 +1014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the estimator is consistent. But confidence interval coverage is wrong."
+    "Now the distribution of $\\hat \\alpha$ does not converge to a normal when the sample size increases."
    ]
   },
   {
@@ -1029,7 +1025,7 @@
     }
    },
    "source": [
-    "### Pre-testing and Machine Learning"
+    "### Pre-Testing and Machine Learning"
    ]
   },
   {
@@ -1060,9 +1056,7 @@
     }
    },
    "source": [
-    "## 9.4 Post-double selection\n",
-    "\n",
-    "[*back to index*](#/1)"
+    "## 9.4 Post-Double Selection"
    ]
   },
   {
@@ -1309,10 +1303,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean with beta=-0.03: 0.9994\n",
-      "Mean with beta=-0.09: 0.9994\n",
-      "Mean with beta=-0.30: 0.9994\n",
-      "Mean with beta=-0.90: 0.9994\n"
+      "Mean alpha with beta=-0.03: 0.9994\n",
+      "Mean alpha with beta=-0.09: 0.9994\n",
+      "Mean alpha with beta=-0.30: 0.9994\n",
+      "Mean alpha with beta=-0.90: 0.9994\n"
      ]
     }
    ],
@@ -1325,7 +1319,7 @@
     "for k, b_ in enumerate(b_sequence):\n",
     "    label = 'beta = %.2f' % b_\n",
     "    alpha[label] = post_double_selection(a, b_, c, n)['Post-double']\n",
-    "    print('Mean with beta=%.2f: %.4f' % (b_, np.mean(alpha[label])))"
+    "    print('Mean alpha with beta=%.2f: %.4f' % (b_, np.mean(alpha[label])))"
    ]
   },
   {
@@ -1384,10 +1378,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean with n=100: 0.9964\n",
-      "Mean with n=300: 0.9985\n",
-      "Mean with n=1000: 0.9994\n",
-      "Mean with n=3000: 0.9990\n"
+      "Mean alpha with n=100: 0.9964\n",
+      "Mean alpha with n=300: 0.9985\n",
+      "Mean alpha with n=1000: 0.9994\n",
+      "Mean alpha with n=3000: 0.9990\n"
      ]
     }
    ],
@@ -1400,7 +1394,7 @@
     "for k, n_ in enumerate(n_sequence):\n",
     "    label = 'N = %.0f' % n_\n",
     "    alpha[label] = post_double_selection(a, b, c, n_)['Post-double']\n",
-    "    print('Mean with n=%.0f: %.4f' % (n_, np.mean(alpha[label])))"
+    "    print('Mean alpha with n=%.0f: %.4f' % (n_, np.mean(alpha[label])))"
    ]
   },
   {
@@ -1460,10 +1454,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean with n=100: 0.9964\n",
-      "Mean with n=300: 0.9985\n",
-      "Mean with n=1000: 0.9994\n",
-      "Mean with n=3000: 0.9990\n"
+      "Mean alpha with n=100: 0.9964\n",
+      "Mean alpha with n=300: 0.9985\n",
+      "Mean alpha with n=1000: 0.9994\n",
+      "Mean alpha with n=3000: 0.9990\n"
      ]
     }
    ],
@@ -1476,7 +1470,7 @@
     "for k, n_ in enumerate(n_sequence):\n",
     "    label = 'N = %.0f' % n_\n",
     "    alpha[label] = post_double_selection(a, beta[k], c, n_)['Post-double']\n",
-    "    print('Mean with n=%.0f: %.4f' % (n_, np.mean(alpha[label])))"
+    "    print('Mean alpha with n=%.0f: %.4f' % (n_, np.mean(alpha[label])))"
    ]
   },
   {
@@ -1545,9 +1539,7 @@
     }
    },
    "source": [
-    "## 9.5 Double/debiased machine learning\n",
-    "\n",
-    "[*back to index*](#/1)"
+    "## 9.5 Double/debiased Machine Learning"
    ]
   },
   {
@@ -2276,7 +2268,7 @@
       "Lasso    : -8.7963\n",
       "Tree     : 1.2879\n",
       "Forest   : 2.4938\n",
-      "Boosting : 0.5977\n"
+      "Boosting : 0.5976\n"
      ]
     }
    ],
@@ -2346,7 +2338,7 @@
       "Lasso    : 1.2511\n",
       "Tree     : 0.9605\n",
       "Forest   : 0.5325\n",
-      "Boosting : 1.0332\n"
+      "Boosting : 1.0327\n"
      ]
     }
    ],
